# vscp-tcpip-daemon

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.codacy/: codacy.yaml
.github/: dependabot.yml
.github/workflows/: ccpp.yml  linux.yml  macos.yml  windows.yml
install_files/unix/: vscpd.json
src/daemon/: controlobject.cpp  devicethread.cpp  lua_vscp_wrkthread.cpp  userlist.cpp  vscp.h  vscphelper_compat.cpp  vscphelper_compat.h  websrv.cpp
src/daemon/legacy_common/: sockettcp.c  sockettcp.h  vscp_debug.h  vscpd_caps.h
src/daemon/legacy_vscp_common/: canal.h  controlobject.cpp  restsrv.cpp  tcpipsrv.cpp  websocketsrv.cpp
src/daemon/legacy_vscp_common/win32helpers/arpa/: inet.h
src/daemon/linux/: vscpd.cpp
src/vscp-mkpasswd/: Makefile
src/vscpcmd/: Makefile
tests/helperlib/: Makefile  Makefile.in  Makefile.old
tests/multicast/: Makefile
tests/noop/: Makefile
tests/tables-remote-class/: Makefile
tests/tables-tcp/: Makefile  test_tables_tcp.c
tests/udp/: Makefile
